# rust-edb-api

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  create_users.sh  test_urls.sh  users.db  users.sql
src/: io.rs  main.rs  routes.rs  tests.rs  utils.rs
src/io/: dna.rs  genes.rs  users.rs
src/routes/: dna.rs  genes.rs  users.rs
src/tests/: mod.rs
src/utils/: genes.rs
templates/verification/: api.html  web.html
