[package]
name = "edb-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auth = {path =  "../rust-auth"}
dna = {path =  "../rust-dna"}
genes = {path =  "../rust-genes"}
sys = {path =  "../rust-sys"}
rocket = {version = "0.5.0", features = ["json"]}
serde = {version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
csv = "1.3.0"
jsonwebtoken = "9.2.0"
dotenvy = "0.15.7"
once_cell = "1.19.0"
handlebars = "5.1.0"
log = "0.4.20"
tracing-appender = "0.2.3"
tracing-subscriber = {version = "0.3.18", features = [ "json"]}
tracing-log = "0.2.0"
tracing = "0.1.40"
